force-app/main/default/objects/KanbanLink__c/KanbanLink__c.object-meta.xml
<CustomObject>
    <label>Kanban Link</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Kanban Link #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kanban Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>