force-app/main/default/objects/KanbanLink__c/fields/MasterCard__c.field-meta.xml
<CustomField>
    <fullName>MasterCard__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Leading (master) card in the link</description>
    <label>Master Card</label>
    <referenceTo>KanbanCard__c</referenceTo>
    <relationshipLabel>Master Links</relationshipLabel>
    <relationshipName>MasterLinks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>