force-app/main/default/objects/KanbanLink__c/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <description>Type of dependency between cards</description>
    <label>Relation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>relatesTo</fullName>
            </value>
            <value>
                <fullName>requiredFor</fullName>
            </value>
            <value>
                <fullName>duplicate</fullName>
            </value>
            <value>
                <fullName>parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>