force-app/main/default/objects/KanbanLink__c/fields/SlaveCard__c.field-meta.xml
<CustomField>
    <fullName>SlaveCard__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Dependent (slave) card in the link</description>
    <label>Slave Card</label>
    <referenceTo>KanbanCard__c</referenceTo>
    <relationshipLabel>Slave Links</relationshipLabel>
    <relationshipName>SlaveLinks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>